<resources>
    <string name="app_name">MIsTareasITT</string>
    <string name="mis_tareas">Mis Tareas!</string>
    <string name="imagen_de_cielo">imagen de cielo</string>
    <string name="dam">DAM</string>
    <string name="usuario">Usuario</string>
    <string name="pass">Password</string>
    <string name="loguearse">Login</string>
    <string name="nuevo_usuario">NUEVO USUARIO</string>
</resources>
